[package]
name = "pgTest"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level=3
debug=0
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=false
codegen-units=1

[profile.test]
opt-level=3
debug=0
debug-assertions=false
overflow-checks=false
lto=true
panic="abort"
incremental=false
codegen-units=1


[dependencies]
tokio-postgres="0.7.2"
graph-generators = "0.1.0"
rand="0.8.4"
rand_distr = "0.4.1"
async-fs = "1.5.0"
futures-lite = "1.12.0"

[dependencies.tokio]
version="1.9.0"
features = ["full"]